name: web-lesson1
version: 0
homepage: https://typeclasses.com/web-servers/lesson-1
build-type: Simple
cabal-version: >= 1.10

library
    hs-source-dirs: .
    exposed-modules: WebLesson1
    default-language: Haskell2010

    build-depends:
        base
      , network
      , network-simple >= 0.4.2
