name: web-lesson2
version: 0
homepage: https://typeclasses.com/web-servers/lesson-2
build-type: Simple
cabal-version: >= 1.10

library
    hs-source-dirs: .
    exposed-modules: WebLesson2
    default-language: Haskell2010

    build-depends:
        base
      , bytestring
      , network
      , network-simple >= 0.4.2

