name: web-lesson4
version: 0
homepage: https://typeclasses.com/web-servers/lesson-4
build-type: Simple
cabal-version: >= 1.10

library
    hs-source-dirs: .
    exposed-modules: WebLesson4
    default-language: Haskell2010

    build-depends:
        base
      , bytestring
      , network
      , network-simple >= 0.4.2
      , text
